--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+.top-stories-heading{
+  margin-left: 15px;
+  margin-top: 10px;
+  display: inline-block;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.last-week-stories{
+  margin-left: 15px;
+  margin-top: 10px;
+  display: inline-block;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.right-side-blogtitle{
+  font-size: .80rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.left-side-blogtitle{
+  font-size: 1rem;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left-side-blogbody{
+  font-size: 12px;
 }
