--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -6,6 +6,7 @@
 .last-week-stories{
   margin-left: 15px;
   margin-top: 10px;
+  margin-bottom: 24px;
   display: inline-block;
 }
 .right-side-blogtitle{
